Account for TABSTRIP_TOOLBAR_OVERLAP in opaque frame top height.

This seems to affect only the painting of the frame background and Linux caption
buttons.  In testing the first and from code inspection of the second, both seem
to want "the actual height above the toolbar", which doesn't include this
overlap.

This eliminates an ugly 1 DIP misalignment of the theme background image bottom
with the toolbar top in some themes.

Bug: 866671
Change-Id: I55d1aea4c3af656ae427373dff9bacc76bb932ab
Reviewed-on: https://chromium-review.googlesource.com/1157875
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579980}
Former-commit-id: 21a88094c09dec71b8236f83b7a28c4b13ff8220